infrastructure/eks/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cnoaf-ingress
  namespace: cnoaf
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  ingressClassName: alb

  rules:
    - http:
        paths:
          # USER SERVICE
          - path: /api/v1/users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80

          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80

          # COURSE SERVICE
          - path: /api/v1/courses
            pathType: Prefix
            backend:
              service:
                name: course-service
                port:
                  number: 80

          # ENROLLMENT SERVICE
          - path: /api/v1/enrollments
            pathType: Prefix
            backend:
              service:
                name: enrollment-service
                port:
                  number: 80
